remove llm list
